--- a/res/menu/options.xml
+++ b/res/menu/options.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/ekhoSettings" android:title="@string/engine_settings"></item>
+<!--    <item android:id="@+id/ekhoSettings" android:title="@string/engine_settings"></item>-->
     <item android:id="@+id/ttsSettings" android:title="@string/tts_settings"></item>
     
 
