add privacy link

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -69,6 +69,12 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Privacy Policy" />
+
     </LinearLayout>
 
 </LinearLayout>
